--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,22 @@
 <div class="container">
-  {{ hero }}
+  <h2>My Heroes</h2>
+
+  <ul class="list-group mb-3">
+    <li
+      class="list-group-item d-flex justify-content-between align-items-center"
+      [class.active]="hero === selectedHero"
+      *ngFor="let hero of heroes"
+      (click)="onSelect(hero)"
+    >
+      {{ hero.name }}
+      <span class="badge badge-primary badge-pill">
+        {{ hero.id }}
+      </span>
+    </li>
+  </ul>
+
+  <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+
 </div>
+
 
