--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -23,6 +23,8 @@
           [(ngModel)]="hero.name"
         />
       </div>
+
     </div>
+    <button class="btn-secondary btn" (click)="goBack()">Voltar</button>
   </div>
 </div>
