--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -24,7 +24,19 @@
         />
       </div>
 
+      <button
+        class="btn btn-primary mr-3"
+        type="button"
+        [disabled]="!hero.name.trim()"
+        (click)="save()"
+      >
+        Save
+      </button>
+
+      <button class="btn-secondary btn" type="button" (click)="goBack()">
+        Voltar
+      </button>
+
     </div>
-    <button class="btn-secondary btn" (click)="goBack()">Voltar</button>
   </div>
 </div>
