--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,10 +5,15 @@
     <div class="col">
       <app-hero-add (add)="onAdd($event)"></app-hero-add>
     </div>
+
+    <div class="col-12 col-sm-6">
+      <app-search-input (search)="onFilter($event)"></app-search-input>
+    </div>
+
   </div>
 
   <ul class="list-group mb-3">
-    <li class="list-group-item" *ngFor="let hero of heroes">
+    <li class="list-group-item" *ngFor="let hero of heroes | heroFilter: filter">
       <div class="d-flex">
         <div class="p-2">
           <span class="badge badge-primary badge-pill">{{ hero.id }}</span>
